kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logiflow
  labels:
    name: logiflow
