kubernetes/07-pedido-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  selector:
    app: pedido-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido-service
  template:
    metadata:
      labels:
        app: pedido-service
    spec:
      containers:
      - name: pedido-service
        image: pedido-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "640Mi"
            cpu: "500m"
          limits:
            memory: "1280Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 180
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 150
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
