kubernetes/10-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: logiflow
spec:
  selector:
    app: notification-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: notification-service:v3
        imagePullPolicy: Never
        ports:
        - containerPort: 8087
        resources:
          requests:
            memory: "448Mi"
            cpu: "250m"
          limits:
            memory: "896Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 8087
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 8087
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
